2010-05-02 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSavePanel.h,
	* Source/NSSavePanel.m: Add method directoryURL. Fixes bug #29735.

2010-05-02 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m (-_stringWithRTFCharacters:):
	Remove extra space after \'xx characters accidentially introduced
	with last change.

2010-05-01 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m
	(-_runStringForString:attributes:): Only add a delimiter when needed.
	* TextConverters/RTF/RTFProducer.m (-_stringWithRTFCharacters:):
	Only add the \uc0 flag when needed. Use \'AC as attachment character.

2010-05-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* TextConverters/RTF/rtfGrammer.y: Ignore the string parameter of
	a \NeXTGraphic command like OS X does. Fixes bug #29633.
	* TextConverters/RTF/rtfGrammer.tab.c: Regenerated.

2010-04-28  Adam Fedor  <fedor@gnu.org>

	* configure, configure.ac, Headers/Additions/GNUstepGUI/config.h.in,
	Source/NSSliderCell.m: Check for atan2f function (not present on
	old Solaris systems for instance).

2010-04-24 Doug Simons <doug.simons@testplant.com>

	* Source/NSOutlineView.m:
	Fix occasional exception while dragging.

2010-04-24 Doug Simons <doug.simons@testplant.com>

	* Source/NSWindow.m:
	Handle nil view passed to _checkTrackingRectangles:forEvent: (this
	prevents a crash in Windows, e.g. when clicking the toolbar overflow
	widget).

2010-04-24 Doug Simons <doug.simons@testplant.com>

	* Headers/AppKit/NSMenu.h:
	* Source/NSMenu.m:
	* Source/NSMenuItem.m:
	Rebuild in-window menus only when needed on Windows. Also fixed
	notifying a menu item's menu only when a property value actually
	changes.

2010-04-23 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSMenuItem.m: Fix for bug 29635
	(NSMenuItem -initWithCoder: should set modifier mask to 0 if
	NSKeyEquivModMask not defined)

2010-04-23  Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
